[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/GameEnd.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/Sidebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gold_medal.png" type="Texture" id=5]
[ext_resource path="res://assets/silver_medal.png" type="Texture" id=6]
[ext_resource path="res://assets/bronze_medal.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/Background.tscn" type="PackedScene" id=8]

[node name="GameEnd" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="Sidebar" parent="." instance=ExtResource( 3 )]
margin_right = 300.0
margin_bottom = 360.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 300.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 290.0
margin_top = 273.0
margin_right = 690.0
margin_bottom = 447.0
custom_constants/separation = 10

[node name="RanksCenter" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 128.0

[node name="RanksHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/RanksCenter"]
margin_right = 400.0
margin_bottom = 128.0
custom_constants/separation = 50

[node name="GoldVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox"]
margin_right = 100.0
margin_bottom = 128.0

[node name="RankCenter" type="CenterContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/GoldVBox"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Rank" type="TextureRect" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/GoldVBox/RankCenter"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/GoldVBox"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 128.0
text = "Develo"
align = 1

[node name="SilverVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 128.0

[node name="RankCenter" type="CenterContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/SilverVBox"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Rank" type="TextureRect" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/SilverVBox/RankCenter"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/SilverVBox"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 128.0
text = "Develo"
align = 1

[node name="BronzeVBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox"]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 128.0

[node name="RankCenter" type="CenterContainer" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/BronzeVBox"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Rank" type="TextureRect" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/BronzeVBox/RankCenter"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/RanksCenter/RanksHBox/BronzeVBox"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 128.0
text = "Develo"
align = 1

[node name="ButtonCenter" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 400.0
margin_bottom = 174.0

[node name="ButtonMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer/ButtonCenter"]
margin_left = 90.0
margin_right = 310.0
margin_bottom = 36.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ButtonHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ButtonCenter/ButtonMargin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 31.0
custom_constants/separation = 20

[node name="LeaveButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonCenter/ButtonMargin/ButtonHBox"]
margin_right = 77.0
margin_bottom = 26.0
text = "Leave"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonCenter/ButtonMargin/ButtonHBox"]
margin_left = 97.0
margin_right = 210.0
margin_bottom = 26.0
text = "Restart"

[node name="SceneTransitionTween" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonCenter/ButtonMargin/ButtonHBox/LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonCenter/ButtonMargin/ButtonHBox/RestartButton" to="." method="restart_game"]
